Pull request #1215: AG-13222 fix learn more button
Merge in EXTENSIONS/browser-extension from fix/AG-13222 to master

Squashed commit of the following:

commit 0bf1831c85b70eeb84ad7c3edaeacef873f8e2bc
Merge: 758eb9913 0f51630ec
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Mar 17 13:22:12 2022 +0300

    AG-13222 merge

commit 758eb99132fb7d7f2f9109fc21b76710b11e51e7
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Mar 17 12:59:52 2022 +0300

    AG-13222 fix iframe append

commit ac339778da93b51edaa75ccf79f3e33679634c7d
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Mar 16 19:31:21 2022 +0300

    AG-13222 fix line-height

commit 9c987d8ccc838b5cbac5ce6b739ea0ba91eb91b5
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Mar 16 18:42:45 2022 +0300

    AG-13222 add hover to btn

commit 3a57a0e55240ff2fc0ea059993873fbb17c568ae
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Mar 16 18:34:05 2022 +0300

    AG-13222 hide promo block

commit c1448c417066a058acb1b1e7b0ba5c6a7c79da84
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Mar 16 18:18:52 2022 +0300

    AG-13222 fix button

commit 102abb8cbcdb003426185177d2d7c578b0d61924
Author: Anton <a.kaprielov@adguard.com>
Date:   Wed Mar 16 17:08:47 2022 +0300

    AG-13222 fix learn more button

--- a/Extension/assets/css/alert-popup.css
+++ b/Extension/assets/css/alert-popup.css
@@ -174,19 +174,12 @@
 }
 
 .adguard-update-popup__btn {
-    border-radius: 4px;
     color: #000;
-    text-decoration: none;
     line-height: 32px;
-    min-width: 235px;
     text-transform: uppercase;
-    -webkit-box-shadow: inset 0 0 0 1px rgba(151, 151, 151, 0.28);
-    box-shadow: inset 0 0 0 1px rgba(151, 151, 151, 0.28);
-    -webkit-transition: 0.3s ease background-color;
-    -o-transition: 0.3s ease background-color;
-    transition: 0.3s ease background-color;
+    transition: 0.3s ease color;
 }
 
 .adguard-update-popup__btn:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    color: rgba(0, 0, 0, 0.63);
 }
